fix navbar spacing

--- a/_less/custom/type.less
+++ b/_less/custom/type.less
@@ -127,9 +127,12 @@ cite    { font-style: normal; }
 // -------------------------
 
 .page-header {
-  padding-bottom: ((@line-height-computed / 2) - 1);
-  margin: (@line-height-computed * 2) 0 @line-height-computed;
+  margin: 30px 0 30px;
+  padding-bottom: 0;
   border-bottom: 1px solid @page-header-border-color;
+  h1 {
+    margin: 0;
+  }
 }
 
 
