--- a/_less/global/_nav.less
+++ b/_less/global/_nav.less
@@ -50,7 +50,7 @@
   padding-bottom: 15px;
 }
 .navbar-nav .open .dropdown-menu > li > a, .navbar-nav .open .dropdown-menu .dropdown-header {
-  padding: 10px 28px;
+  // padding: 10px 28px;
 }
 .dropdown .caret {
   @media (max-width: @screen-sm-min) {
@@ -70,11 +70,11 @@
 
 .dropdown-menu-2 {
   padding: 0;
-  margin: -5px 0 5px;
+  margin-bottom: 5px;
   &> li {
     list-style: none;
     &> a {
-      padding: 5px 20px 5px 40px;
+      padding: 3px 20px 3px 40px;
       display: block;
       clear: both;
       font-weight: normal;
@@ -100,7 +100,6 @@
 }
 
 .navbar-nav .open .dropdown-menu > li.dropdown-homepage > a, .navbar-nav .open .dropdown-menu .dropdown-header .dropdown-homepage > a {
-  padding: 5px 28px;
   font-weight: bold;
 }
 .department-nav .dropdown-menu .divider {
